--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,16 +1,32 @@
 {
-  "extends": ["eslint:recommended", "plugin:react/recommended", "prettier"],
-  "rules": {
-    "no-console": 1
-  },
-  "plugins": ["import"],
-  "parserOptions": {
-    "ecmaVersion": 2018,
-    "sourceType": "module"
-  },
+  "extends": [
+    "airbnb",
+    "plugin:prettier/recommended",
+    "prettier/react"
+  ],
   "env": {
-    "es6": true,
     "browser": true,
+    "commonjs": true,
+    "es6": true,
+    "jest": true,
     "node": true
+  },
+  "rules": {
+    "jsx-a11y/href-no-hash": ["off"],
+    "react/jsx-filename-extension": ["warn", { "extensions": [".js", ".jsx"] }],
+    "max-len": [
+      "warn",
+      {
+        "code": 80,
+        "tabWidth": 2,
+        "comments": 80,
+        "ignoreComments": false,
+        "ignoreTrailingComments": true,
+        "ignoreUrls": true,
+        "ignoreStrings": true,
+        "ignoreTemplateLiterals": true,
+        "ignoreRegExpLiterals": true
+      }
+    ]
   }
 }
